--- a/samples/bar.html
+++ b/samples/bar.html
@@ -3,9 +3,9 @@
 
 <head>
 	<title>Bar Chart</title>
-	<script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
+	<script src="../node_modules/chart.js/dist/chart.js"></script>
 	<script src="../chartjs-plugin-annotation.js"></script>
-	<script src="../node_modules/chart.js/samples/utils.js"></script>
+	<script src="https://chartjs.org/samples/master/utils.js"></script>
 	<style>
 	canvas {
 		-moz-user-select: none;
@@ -25,9 +25,10 @@
 	<button id="addData">Add Data</button>
 	<button id="removeData">Remove Data</button>
 	<script>
-		var MONTHS = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
-		var color = Chart.helpers.color;
-		var barChartData = {
+		/* eslint-disable no-undef,no-console */
+		const MONTHS = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
+		const color = Chart.helpers.color;
+		const barChartData = {
 			labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
 			datasets: [{
 				label: 'Dataset 1',
@@ -62,7 +63,7 @@
 		};
 
 		window.onload = function() {
-			var ctx = document.getElementById('canvas').getContext('2d');
+			const ctx = document.getElementById('canvas').getContext('2d');
 			window.myBar = new Chart(ctx, {
 				type: 'bar',
 				data: barChartData,
@@ -75,99 +76,99 @@
 						display: true,
 						text: 'Chart.js Bar Chart'
 					},
-					annotation: {
-						drawTime: 'afterDatasetsDraw',
-						events: ['click'],
-						annotations: [{
-							id: 'hline',
-							type: 'line',
-							mode: 'horizontal',
-							scaleID: 'y-axis-0',
-							value: randomScalingFactor(),
-							borderColor: 'black',
-							borderWidth: 5,
-							label: {
-								backgroundColor: 'red',
-								content: 'Test Label',
-								enabled: true
-							},
-							onClick: function(e) {
-								// The annotation is is bound to the `this` variable
-								console.log('Annotation', e.type, this);
-							}
-						}, {
-							id: 'vline',
-							type: 'line',
-							mode: 'vertical',
-							scaleID: 'x-axis-0',
-							value: 'May',
-							borderColor: 'black',
-							borderWidth: 5,
-							label: {
-								backgroundColor: 'red',
-								content: 'Test Label',
-								enabled: true
-							},
-							onClick: function(e) {
-								// The annotation is is bound to the `this` variable
-								console.log('Annotation', e.type, this);
-							}
-						}, {
-							id: 'vline-rotated',
-							type: 'line',
-							mode: 'vertical',
-							scaleID: 'x-axis-0',
-							value: 'June',
-							borderColor: 'black',
-							borderWidth: 5,
-							label: {
-								backgroundColor: 'red',
-								content: 'Test Label',
-								enabled: true,
-								rotation: -90
-							},
-							onClick: function(e) {
-								// The annotation is is bound to the `this` variable
-								console.log('Annotation', e.type, this);
-							}
-						}, {
-							drawTime: 'beforeDatasetsDraw',
-							type: 'box',
-							xScaleID: 'x-axis-0',
-							yScaleID: 'y-axis-0',
-							xMin: 'February',
-							xMax: 'April',
-							yMin: randomScalingFactor(),
-							yMax: randomScalingFactor(),
-							backgroundColor: 'rgba(101, 33, 171, 0.5)',
-							borderColor: 'rgb(101, 33, 171)',
-							borderWidth: 1,
-							onClick: function(e) {
-								console.log('Box', e.type, this);
-							}
-						}]
+					plugins: {
+						annotation: {
+							drawTime: 'afterDatasetsDraw',
+							events: ['click'],
+							annotations: [{
+								id: 'hline',
+								type: 'line',
+								mode: 'horizontal',
+								scaleID: 'y',
+								value: randomScalingFactor(),
+								borderColor: 'black',
+								borderWidth: 5,
+								label: {
+									backgroundColor: 'red',
+									content: 'Test Label',
+									enabled: true
+								},
+								onClick(e) {
+									// The annotation is is bound to the `this` variable
+									console.log('Annotation', e.type, this);
+								}
+							}, {
+								id: 'vline',
+								type: 'line',
+								mode: 'vertical',
+								scaleID: 'x',
+								value: 'May',
+								borderColor: 'black',
+								borderWidth: 5,
+								label: {
+									backgroundColor: 'red',
+									content: 'Test Label',
+									enabled: true
+								},
+								onClick(e) {
+									// The annotation is is bound to the `this` variable
+									console.log('Annotation', e.type, this);
+								}
+							}, {
+								id: 'vline-rotated',
+								type: 'line',
+								mode: 'vertical',
+								scaleID: 'x',
+								value: 'June',
+								borderColor: 'black',
+								borderWidth: 5,
+								label: {
+									backgroundColor: 'red',
+									content: 'Test Label',
+									enabled: true,
+									rotation: -90
+								},
+								onClick(e) {
+									// The annotation is is bound to the `this` variable
+									console.log('Annotation', e.type, this);
+								}
+							}, {
+								drawTime: 'beforeDatasetsDraw',
+								type: 'box',
+								xScaleID: 'x',
+								yScaleID: 'y',
+								xMin: 'February',
+								xMax: 'April',
+								yMin: randomScalingFactor(),
+								yMax: randomScalingFactor(),
+								backgroundColor: 'rgba(101, 33, 171, 0.5)',
+								borderColor: 'rgb(101, 33, 171)',
+								borderWidth: 1,
+								onClick(e) {
+									console.log('Box', e.type, this);
+								}
+							}]
+						}
 					}
 				}
 			});
 
 		};
 
-		document.getElementById('randomizeData').addEventListener('click', function() {
-			var zero = Math.random() < 0.2 ? true : false;
-			barChartData.datasets.forEach(function(dataset) {
-				dataset.data = dataset.data.map(function() {
-					return zero ? 0.0 : randomScalingFactor();
-				});
+		document.getElementById('randomizeData').addEventListener('click', () => {
+			const zero = Math.random() < 0.2;
+			barChartData.datasets.forEach((dataset) => {
+				dataset.data = dataset.data.map(() => zero ? 0.0 : randomScalingFactor());
 
 			});
 			window.myBar.update();
 		});
 
-		var colorNames = Object.keys(window.chartColors);
-		document.getElementById('addDataset').addEventListener('click', function() {
-			var colorName = colorNames[barChartData.datasets.length % colorNames.length];
-	var dsColor = window.chartColors[colorName];
-			var newDataset = {
+		const colorNames = Object.keys(window.chartColors);
+		document.getElementById('addDataset').addEventListener('click', () => {
+			const colorName = colorNames[barChartData.datasets.length % colorNames.length];
+	const dsColor = window.chartColors[colorName];
+			const newDataset = {
 				label: 'Dataset ' + barChartData.datasets.length,
 				backgroundColor: color(dsColor).alpha(0.5).rgbString(),
 				borderColor: dsColor,
@@ -175,7 +176,7 @@
 				data: []
 			};
 
-			for (var index = 0; index < barChartData.labels.length; ++index) {
+			for (let index = 0; index < barChartData.labels.length; ++index) {
 				newDataset.data.push(randomScalingFactor());
 			}
 
@@ -183,12 +184,12 @@
 			window.myBar.update();
 		});
 
-		document.getElementById('addData').addEventListener('click', function() {
+		document.getElementById('addData').addEventListener('click', () => {
 			if (barChartData.datasets.length > 0) {
-				var month = MONTHS[barChartData.labels.length % MONTHS.length];
+				const month = MONTHS[barChartData.labels.length % MONTHS.length];
 				barChartData.labels.push(month);
 
-				for (var index = 0; index < barChartData.datasets.length; ++index) {
+				for (let index = 0; index < barChartData.datasets.length; ++index) {
 					// window.myBar.addData(randomScalingFactor(), index);
 					barChartData.datasets[index].data.push(randomScalingFactor());
 				}
@@ -197,15 +198,15 @@
 			}
 		});
 
-		document.getElementById('removeDataset').addEventListener('click', function() {
+		document.getElementById('removeDataset').addEventListener('click', () => {
 			barChartData.datasets.splice(0, 1);
 			window.myBar.update();
 		});
 
-		document.getElementById('removeData').addEventListener('click', function() {
+		document.getElementById('removeData').addEventListener('click', () => {
 			barChartData.labels.splice(-1, 1); // remove the label first
 
-			barChartData.datasets.forEach(function(dataset) {
+			barChartData.datasets.forEach((dataset) => {
 				dataset.data.pop();
 			});
 
