--- a/samples/labels.html
+++ b/samples/labels.html
@@ -3,14 +3,14 @@
 
 <head>
 	<title>Scatter Chart</title>
-	<script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
+	<script src="../node_modules/chart.js/dist/chart.js"></script>
 	<script src="../chartjs-plugin-annotation.js"></script>
 	<style>
-	canvas {
-		-moz-user-select: none;
-		-webkit-user-select: none;
-		-ms-user-select: none;
-	}
+		canvas {
+			-moz-user-select: none;
+			-webkit-user-select: none;
+			-ms-user-select: none;
+		}
 	</style>
 </head>
 
@@ -21,14 +21,14 @@
 		</div>
 	</div>
 	<script>
-		var randomScalingFactor = function() {
+		const randomScalingFactor = function() {
 			return (Math.random() > 0.5 ? 1.0 : -1.0) * Math.round(Math.random() * 100);
 		};
-		var randomColor = function(opacity) {
+		const randomColor = function(opacity) {
 			return 'rgba(' + Math.round(Math.random() * 255) + ',' + Math.round(Math.random() * 255) + ',' + Math.round(Math.random() * 255) + ',' + (opacity || '.3') + ')';
 		};
 
-		var scatterChartData = {
+		const scatterChartData = {
 			datasets: [{
 				label: 'My First dataset',
 				data: [{
@@ -80,7 +80,7 @@
 			}]
 		};
 
-		scatterChartData.datasets.forEach(function(dataset) {
+		scatterChartData.datasets.forEach((dataset) => {
 			dataset.borderColor = randomColor(0.4);
 			dataset.backgroundColor = randomColor(0.1);
 			dataset.pointBorderColor = randomColor(0.7);
@@ -89,8 +89,9 @@
 		});
 
 		window.onload = function() {
-			var ctx = document.getElementById('canvas').getContext('2d');
-			window.myScatter = Chart.Scatter(ctx, {
+			const ctx = document.getElementById('canvas').getContext('2d');
+			window.myScatter = new Chart(ctx, {
+				type: 'scatter',
 				data: scatterChartData,
 				options: {
 					title: {
@@ -98,7 +99,7 @@
 						text: 'Chart.js Scatter Chart'
 					},
 					scales: {
-						xAxes: [{
+						x: {
 							position: 'top',
 							gridLines: {
 								zeroLineColor: 'rgba(0,255,0,1)'
@@ -113,8 +114,8 @@
 								// min: -100,
 								// max: 0
 							}
-						}],
-						yAxes: [{
+						},
+						y: {
 							position: 'right',
 							gridLines: {
 								zeroLineColor: 'rgba(0,255,0,1)'
@@ -128,49 +129,51 @@
 								// min: -100,
 								// max: 0
 							}
-						}]
+						}
 					},
-					annotation: {
-						events: ['click'],
-						annotations: [{
-							id: 'hline',
-							type: 'line',
-							mode: 'horizontal',
-							scaleID: 'y-axis-1',
-							value: 25,
-							borderColor: 'black',
-							borderWidth: 5,
-							label: {
-								yAdjust: -20,
-								backgroundColor: 'red',
-								content: 'This is a long test label',
-								enabled: true
+					plugins: {
+						annotation: {
+							events: ['click'],
+							annotations: [{
+								id: 'hline',
+								type: 'line',
+								mode: 'horizontal',
+								scaleID: 'y',
+								value: 25,
+								borderColor: 'black',
+								borderWidth: 5,
+								label: {
+									yAdjust: -20,
+									backgroundColor: 'red',
+									content: 'This is a long test label',
+									enabled: true
+								},
+								onClick(e) {
+									// The annotation is is bound to the `this` variable
+									console.log('Annotation', e.type, this);
+								}
 							},
-							onClick: function(e) {
-								// The annotation is is bound to the `this` variable
-								console.log('Annotation', e.type, this);
-							}
-						},
-						{
-							id: 'vline',
-							type: 'line',
-							mode: 'vertical',
-							scaleID: 'x-axis-1',
-							value: 25,
-							endValue: 45,
-							borderColor: 'red',
-							borderWidth: 5,
-							label: {
-								position: 'bottom',
-								yAdjust: 100,
-								content: 'This is a another test label',
-								enabled: true
-							},
-							onClick: function(e) {
-								// The annotation is is bound to the `this` variable
-								console.log('Annotation', e.type, this);
-							}
-						}]
+							{
+								id: 'vline',
+								type: 'line',
+								mode: 'vertical',
+								scaleID: 'x',
+								value: 25,
+								endValue: 45,
+								borderColor: 'red',
+								borderWidth: 5,
+								label: {
+									position: 'bottom',
+									yAdjust: 100,
+									content: 'This is a another test label',
+									enabled: true
+								},
+								onClick(e) {
+									// The annotation is is bound to the `this` variable
+									console.log('Annotation', e.type, this);
+								}
+							}]
+						}
 					}
 				}
 			});
