--- a/samples/line-logarithmic.html
+++ b/samples/line-logarithmic.html
@@ -3,15 +3,15 @@
 
 <head>
 	<title>Logarithmic Line Chart</title>
-	<script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
+	<script src="../node_modules/chart.js/dist/chart.js"></script>
 	<script src="../chartjs-plugin-annotation.js"></script>
-	<script src="../node_modules/chart.js/samples/utils.js"></script>
+	<script src="https://chartjs.org/samples/master/utils.js"></script>
 	<style>
-	canvas {
-		-moz-user-select: none;
-		-webkit-user-select: none;
-		-ms-user-select: none;
-	}
+		canvas {
+			-moz-user-select: none;
+			-webkit-user-select: none;
+			-ms-user-select: none;
+		}
 	</style>
 </head>
 
@@ -21,132 +21,132 @@
 	</div>
 	<button id="randomizeData">Randomize Data</button>
 	<script>
-	var randomScalingFactor = function() {
-		return Math.ceil(Math.random() * 10.0) * Math.pow(10, Math.ceil(Math.random() * 5));
-	};
+		const randomScalingFactor = function() {
+			return Math.ceil(Math.random() * 10.0) * Math.pow(10, Math.ceil(Math.random() * 5));
+		};
 
-	var config = {
-		type: 'line',
-		data: {
-			labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
-			datasets: [{
-				label: 'My First dataset',
-				backgroundColor: window.chartColors.red,
-				borderColor: window.chartColors.red,
-				fill: false,
-				data: [
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor()
-				],
-			}, {
-				label: 'My Second dataset',
-				backgroundColor: window.chartColors.blue,
-				borderColor: window.chartColors.blue,
-				fill: false,
-				data: [
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor()
-				],
-			}]
-		},
-		options: {
-			responsive: true,
-			title: {
-				display: true,
-				text: 'Chart.js Line Chart - Logarithmic'
-			},
-			scales: {
-				xAxes: [{
-					display: true,
-				}],
-				yAxes: [{
-					display: true,
-					type: 'logarithmic',
+		const config = {
+			type: 'line',
+			data: {
+				labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+				datasets: [{
+					label: 'My First dataset',
+					backgroundColor: window.chartColors.red,
+					borderColor: window.chartColors.red,
+					fill: false,
+					data: [
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor()
+					],
+				}, {
+					label: 'My Second dataset',
+					backgroundColor: window.chartColors.blue,
+					borderColor: window.chartColors.blue,
+					fill: false,
+					data: [
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor()
+					],
 				}]
 			},
-			annotation: {
-				events: ['click'],
-				annotations: [{
-					drawTime: 'afterDraw',
-					id: 'hline',
-					type: 'line',
-					mode: 'horizontal',
-					scaleID: 'y-axis-0',
-					value: randomScalingFactor(),
-					borderColor: 'black',
-					borderWidth: 5,
-					label: {
-						backgroundColor: 'red',
-						content: 'Test Label',
-						enabled: true
+			options: {
+				responsive: true,
+				title: {
+					display: true,
+					text: 'Chart.js Line Chart - Logarithmic'
+				},
+				scales: {
+					x: {
+						display: true,
 					},
-					onClick: function(e) {
-						// The annotation is is bound to the `this` variable
-						console.log('Annotation', e.type, this);
+					y: {
+						display: true,
+						type: 'logarithmic',
 					}
-				}, {
-					drawTime: 'afterDraw',
-					id: 'vline',
-					type: 'line',
-					mode: 'vertical',
-					scaleID: 'x-axis-0',
-					value: 'May',
-					borderColor: 'black',
-					borderWidth: 5,
-					label: {
-						backgroundColor: 'red',
-						content: 'Test Label',
-						enabled: true
-					},
-					onClick: function(e) {
-						// The annotation is is bound to the `this` variable
-						console.log('Annotation', e.type, this);
+				},
+				plugins: {
+					annotation: {
+						events: ['click'],
+						annotations: [{
+							drawTime: 'afterDraw',
+							id: 'hline',
+							type: 'line',
+							mode: 'horizontal',
+							scaleID: 'y',
+							value: randomScalingFactor(),
+							borderColor: 'black',
+							borderWidth: 5,
+							label: {
+								backgroundColor: 'red',
+								content: 'Test Label',
+								enabled: true
+							},
+							onClick(e) {
+								// The annotation is is bound to the `this` variable
+								console.log('Annotation', e.type, this);
+							}
+						}, {
+							drawTime: 'afterDraw',
+							id: 'vline',
+							type: 'line',
+							mode: 'vertical',
+							scaleID: 'x',
+							value: 'May',
+							borderColor: 'black',
+							borderWidth: 5,
+							label: {
+								backgroundColor: 'red',
+								content: 'Test Label',
+								enabled: true
+							},
+							onClick(e) {
+								// The annotation is is bound to the `this` variable
+								console.log('Annotation', e.type, this);
+							}
+						}, {
+							drawTime: 'beforeDatasetsDraw',
+							type: 'box',
+							xScaleID: 'x',
+							yScaleID: 'y',
+							xMin: 'February',
+							xMax: 'April',
+							yMin: randomScalingFactor(),
+							yMax: randomScalingFactor(),
+							backgroundColor: 'rgba(101, 33, 171, 0.5)',
+							borderColor: 'rgb(101, 33, 171)',
+							borderWidth: 1,
+							onClick(e) {
+								console.log('Box', e.type, this);
+							}
+						}]
 					}
-				}, {
-					drawTime: 'beforeDatasetsDraw',
-					type: 'box',
-					xScaleID: 'x-axis-0',
-					yScaleID: 'y-axis-0',
-					xMin: 'February',
-					xMax: 'April',
-					yMin: randomScalingFactor(),
-					yMax: randomScalingFactor(),
-					backgroundColor: 'rgba(101, 33, 171, 0.5)',
-					borderColor: 'rgb(101, 33, 171)',
-					borderWidth: 1,
-					onClick: function(e) {
-						console.log('Box', e.type, this);
-					}
-				}]
+				}
 			}
-		}
-	};
+		};
 
-	window.onload = function() {
-		var ctx = document.getElementById('canvas').getContext('2d');
-		window.myLine = new Chart(ctx, config);
-	};
+		window.onload = function() {
+			const ctx = document.getElementById('canvas').getContext('2d');
+			window.myLine = new Chart(ctx, config);
+		};
 
-	document.getElementById('randomizeData').addEventListener('click', function() {
-		config.data.datasets.forEach(function(dataset) {
-			dataset.data = dataset.data.map(function() {
-				return randomScalingFactor();
+		document.getElementById('randomizeData').addEventListener('click', () => {
+			config.data.datasets.forEach((dataset) => {
+				dataset.data = dataset.data.map(() => randomScalingFactor());
+
 			});
 
+			window.myLine.update();
 		});
-
-		window.myLine.update();
-	});
 	</script>
 </body>
 
