--- a/samples/pie.html
+++ b/samples/pie.html
@@ -3,9 +3,9 @@
 
 <head>
 	<title>Pie Chart</title>
-	<script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
+	<script src="../node_modules/chart.js/dist/chart.js"></script>
 	<script src="../chartjs-plugin-annotation.js"></script>
-	<script src="../node_modules/chart.js/samples/utils.js"></script>
+	<script src="https://chartjs.org/samples/master/utils.js"></script>
 </head>
 
 <body>
@@ -16,101 +16,101 @@
 	<button id="addDataset">Add Dataset</button>
 	<button id="removeDataset">Remove Dataset</button>
 	<script>
-	var randomScalingFactor = function() {
-		return Math.round(Math.random() * 100);
-	};
-
-	var config = {
-		type: 'pie',
-		data: {
-			datasets: [{
-				data: [
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-				],
-				backgroundColor: [
-					window.chartColors.red,
-					window.chartColors.orange,
-					window.chartColors.yellow,
-					window.chartColors.green,
-					window.chartColors.blue,
-				],
-				label: 'Dataset 1'
-			}],
-			labels: [
-				'Red',
-				'Orange',
-				'Yellow',
-				'Green',
-				'Blue'
-			]
-		},
-		options: {
-			responsive: true,
-			annotation: { // not supported, and should not display or error
-				drawTime: 'beforeDatasetsDraw',
-				events: ['dblclick'],
-				annotations: [{
-					type: 'box',
-					xScaleID: 'x-axis-1',
-					yScaleID: 'y-axis-1',
-					xMin: -120,
-					xMax: 20,
-					yMin: -120,
-					yMax: 20,
-					backgroundColor: 'rgba(101, 33, 171, 1.0)',
-					borderColor: 'rgb(101, 33, 171)',
-					borderWidth: 1,
-					onDblclick: function(e) {
-						console.log('Box', e.type, this);
-					}
-				}]
-			}
-		}
-	};
-
-	window.onload = function() {
-		var ctx = document.getElementById('chart-area').getContext('2d');
-		window.myPie = new Chart(ctx, config);
-	};
-
-	document.getElementById('randomizeData').addEventListener('click', function() {
-		config.data.datasets.forEach(function(dataset) {
-			dataset.data = dataset.data.map(function() {
-				return randomScalingFactor();
-			});
-		});
-
-		window.myPie.update();
-	});
-
-	var colorNames = Object.keys(window.chartColors);
-	document.getElementById('addDataset').addEventListener('click', function() {
-		var newDataset = {
-			backgroundColor: [],
-			data: [],
-			label: 'New dataset ' + config.data.datasets.length,
+		const randomScalingFactor = function() {
+			return Math.round(Math.random() * 100);
 		};
 
-		for (var index = 0; index < config.data.labels.length; ++index) {
-			newDataset.data.push(randomScalingFactor());
+		const config = {
+			type: 'pie',
+			data: {
+				datasets: [{
+					data: [
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+					],
+					backgroundColor: [
+						window.chartColors.red,
+						window.chartColors.orange,
+						window.chartColors.yellow,
+						window.chartColors.green,
+						window.chartColors.blue,
+					],
+					label: 'Dataset 1'
+				}],
+				labels: [
+					'Red',
+					'Orange',
+					'Yellow',
+					'Green',
+					'Blue'
+				]
+			},
+			options: {
+				responsive: true,
+				plugins: {
+					annotation: { // not supported, and should not display or error
+						drawTime: 'beforeDatasetsDraw',
+						events: ['dblclick'],
+						annotations: [{
+							type: 'box',
+							xScaleID: 'x',
+							yScaleID: 'y',
+							xMin: -120,
+							xMax: 20,
+							yMin: -120,
+							yMax: 20,
+							backgroundColor: 'rgba(101, 33, 171, 1.0)',
+							borderColor: 'rgb(101, 33, 171)',
+							borderWidth: 1,
+							onDblclick(e) {
+								console.log('Box', e.type, this);
+							}
+						}]
+					}
+				}
+			}
+		};
 
-			var colorName = colorNames[index % colorNames.length];
-			var newColor = window.chartColors[colorName];
-			newDataset.backgroundColor.push(newColor);
-		}
+		window.onload = function() {
+			const ctx = document.getElementById('chart-area').getContext('2d');
+			window.myPie = new Chart(ctx, config);
+		};
 
-		config.data.datasets.push(newDataset);
-		window.myPie.update();
-	});
+		document.getElementById('randomizeData').addEventListener('click', () => {
+			config.data.datasets.forEach((dataset) => {
+				dataset.data = dataset.data.map(() => randomScalingFactor());
+			});
 
-	document.getElementById('removeDataset').addEventListener('click', function() {
-		config.data.datasets.splice(0, 1);
-		window.myPie.update();
-	});
+			window.myPie.update();
+		});
+
+		const colorNames = Object.keys(window.chartColors);
+		document.getElementById('addDataset').addEventListener('click', () => {
+			const newDataset = {
+				backgroundColor: [],
+				data: [],
+				label: 'New dataset ' + config.data.datasets.length,
+			};
+
+			for (let index = 0; index < config.data.labels.length; ++index) {
+				newDataset.data.push(randomScalingFactor());
+
+				const colorName = colorNames[index % colorNames.length];
+				const newColor = window.chartColors[colorName];
+				newDataset.backgroundColor.push(newColor);
+			}
+
+			config.data.datasets.push(newDataset);
+			window.myPie.update();
+		});
+
+		document.getElementById('removeDataset').addEventListener('click', () => {
+			config.data.datasets.splice(0, 1);
+			window.myPie.update();
+		});
 	</script>
 </body>
 
