--- a/samples/polar-area.html
+++ b/samples/polar-area.html
@@ -3,15 +3,15 @@
 
 <head>
 	<title>Polar Area Chart</title>
-	<script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
+	<script src="../node_modules/chart.js/dist/chart.js"></script>
 	<script src="../chartjs-plugin-annotation.js"></script>
-	<script src="../node_modules/chart.js/samples/utils.js"></script>
+	<script src="https://chartjs.org/samples/master/utils.js"></script>
 	<style>
-	canvas {
-		-moz-user-select: none;
-		-webkit-user-select: none;
-		-ms-user-select: none;
-	}
+		canvas {
+			-moz-user-select: none;
+			-webkit-user-select: none;
+			-ms-user-select: none;
+		}
 	</style>
 </head>
 
@@ -23,114 +23,117 @@
 	<button id="addData">Add Data</button>
 	<button id="removeData">Remove Data</button>
 	<script>
-	var randomScalingFactor = function() {
-		return Math.round(Math.random() * 100);
-	};
+		const randomScalingFactor = function() {
+			return Math.round(Math.random() * 100);
+		};
 
-	var chartColors = window.chartColors;
-	var color = Chart.helpers.color;
-	var config = {
-		data: {
-			datasets: [{
-				data: [
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-				],
-				backgroundColor: [
-					color(chartColors.red).alpha(0.5).rgbString(),
-					color(chartColors.orange).alpha(0.5).rgbString(),
-					color(chartColors.yellow).alpha(0.5).rgbString(),
-					color(chartColors.green).alpha(0.5).rgbString(),
-					color(chartColors.blue).alpha(0.5).rgbString(),
-				],
-				label: 'My dataset' // for legend
-			}],
-			labels: [
-				'Red',
-				'Orange',
-				'Yellow',
-				'Green',
-				'Blue'
-			]
-		},
-		options: {
-			responsive: true,
-			legend: {
-				position: 'right',
+		const chartColors = window.chartColors;
+		const color = Chart.helpers.color;
+		const config = {
+			type: 'polarArea',
+			data: {
+				datasets: [{
+					data: [
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+					],
+					backgroundColor: [
+						color(chartColors.red).alpha(0.5).rgbString(),
+						color(chartColors.orange).alpha(0.5).rgbString(),
+						color(chartColors.yellow).alpha(0.5).rgbString(),
+						color(chartColors.green).alpha(0.5).rgbString(),
+						color(chartColors.blue).alpha(0.5).rgbString(),
+					],
+					label: 'My dataset' // for legend
+				}],
+				labels: [
+					'Red',
+					'Orange',
+					'Yellow',
+					'Green',
+					'Blue'
+				]
 			},
-			title: {
-				display: true,
-				text: 'Chart.js Polar Area Chart'
-			},
-			scale: {
-				ticks: {
-					beginAtZero: true
+			options: {
+				responsive: true,
+				legend: {
+					position: 'right',
 				},
-				reverse: false
-			},
-			animation: {
-				animateRotate: false,
-				animateScale: true
-			},
-			annotation: { // not supported, and should not display or error
-				drawTime: 'beforeDatasetsDraw',
-				events: ['dblclick'],
-				annotations: [{
-					type: 'box',
-					xScaleID: 'x-axis-1',
-					yScaleID: 'y-axis-1',
-					xMin: -120,
-					xMax: 20,
-					yMin: -120,
-					yMax: 20,
-					backgroundColor: 'rgba(101, 33, 171, 1.0)',
-					borderColor: 'rgb(101, 33, 171)',
-					borderWidth: 1,
-					onDblclick: function(e) {
-						console.log('Box', e.type, this);
+				title: {
+					display: true,
+					text: 'Chart.js Polar Area Chart'
+				},
+				scale: {
+					ticks: {
+						beginAtZero: true
+					},
+					reverse: false
+				},
+				animation: {
+					animateRotate: false,
+					animateScale: true
+				},
+				plugins: {
+					annotation: { // not supported, and should not display or error
+						drawTime: 'beforeDatasetsDraw',
+						events: ['dblclick'],
+						annotations: [{
+							type: 'box',
+							xScaleID: 'x',
+							yScaleID: 'y',
+							xMin: -120,
+							xMax: 20,
+							yMin: -120,
+							yMax: 20,
+							backgroundColor: 'rgba(101, 33, 171, 1.0)',
+							borderColor: 'rgb(101, 33, 171)',
+							borderWidth: 1,
+							onDblclick(e) {
+								console.log('Box', e.type, this);
+							}
+						}]
 					}
-				}]
+				}
 			}
-		}
-	};
+		};
 
-	window.onload = function() {
-		var ctx = document.getElementById('chart-area');
-		window.myPolarArea = Chart.PolarArea(ctx, config);
-	};
+		window.onload = function() {
+			const ctx = document.getElementById('chart-area');
+			window.myPolarArea = new Chart(ctx, config);
+		};
 
-	document.getElementById('randomizeData').addEventListener('click', function() {
-		config.data.datasets.forEach(function(piece, i) {
-			piece.data.forEach(function(value, j) {
-				config.data.datasets[i].data[j] = randomScalingFactor();
-			});
-		});
-		window.myPolarArea.update();
-	});
-
-	var colorNames = Object.keys(window.chartColors);
-	document.getElementById('addData').addEventListener('click', function() {
-		if (config.data.datasets.length > 0) {
-			config.data.labels.push('data #' + config.data.labels.length);
-			config.data.datasets.forEach(function(dataset) {
-				var colorName = colorNames[config.data.labels.length % colorNames.length];
-				dataset.backgroundColor.push(window.chartColors[colorName]);
-				dataset.data.push(randomScalingFactor());
+		document.getElementById('randomizeData').addEventListener('click', () => {
+			config.data.datasets.forEach((piece, i) => {
+				piece.data.forEach((value, j) => {
+					config.data.datasets[i].data[j] = randomScalingFactor();
+				});
 			});
 			window.myPolarArea.update();
-		}
-	});
-	document.getElementById('removeData').addEventListener('click', function() {
-		config.data.labels.pop(); // remove the label first
-		config.data.datasets.forEach(function(dataset) {
-			dataset.backgroundColor.pop();
-			dataset.data.pop();
 		});
-		window.myPolarArea.update();
-	});
+
+		const colorNames = Object.keys(window.chartColors);
+		document.getElementById('addData').addEventListener('click', () => {
+			if (config.data.datasets.length > 0) {
+				config.data.labels.push('data #' + config.data.labels.length);
+				config.data.datasets.forEach((dataset) => {
+					const colorName = colorNames[config.data.labels.length % colorNames.length];
+					dataset.backgroundColor.push(window.chartColors[colorName]);
+					dataset.data.push(randomScalingFactor());
+				});
+				window.myPolarArea.update();
+			}
+		});
+		document.getElementById('removeData').addEventListener('click', () => {
+			config.data.labels.pop(); // remove the label first
+			config.data.datasets.forEach((dataset) => {
+				dataset.backgroundColor.pop();
+				dataset.data.pop();
+			});
+			window.myPolarArea.update();
+		});
 	</script>
 </body>
 
