--- a/samples/radar.html
+++ b/samples/radar.html
@@ -1,17 +1,18 @@
-h<!doctype html>
+h
+<!doctype html>
 <html>
 
 <head>
 	<title>Radar Chart</title>
-	<script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
+	<script src="../node_modules/chart.js/dist/chart.js"></script>
 	<script src="../chartjs-plugin-annotation.js"></script>
-	<script src="../node_modules/chart.js/samples/utils.js"></script>
+	<script src="https://chartjs.org/samples/master/utils.js"></script>
 	<style>
-	canvas {
-		-moz-user-select: none;
-		-webkit-user-select: none;
-		-ms-user-select: none;
-	}
+		canvas {
+			-moz-user-select: none;
+			-webkit-user-select: none;
+			-ms-user-select: none;
+		}
 	</style>
 </head>
 
@@ -25,141 +26,141 @@ h<!doctype html>
 	<button id="addData">Add Data</button>
 	<button id="removeData">Remove Data</button>
 	<script>
-	var randomScalingFactor = function() {
-		return Math.round(Math.random() * 100);
-	};
-
-	var color = Chart.helpers.color;
-	var config = {
-		type: 'radar',
-		data: {
-			labels: [['Eating', 'Dinner'], ['Drinking', 'Water'], 'Sleeping', ['Designing', 'Graphics'], 'Coding', 'Cycling', 'Running'],
-			datasets: [{
-				label: 'My First dataset',
-				backgroundColor: color(window.chartColors.red).alpha(0.2).rgbString(),
-				borderColor: window.chartColors.red,
-				pointBackgroundColor: window.chartColors.red,
-				data: [
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor()
-				]
-			}, {
-				label: 'My Second dataset',
-				backgroundColor: color(window.chartColors.blue).alpha(0.2).rgbString(),
-				borderColor: window.chartColors.blue,
-				pointBackgroundColor: window.chartColors.blue,
-				data: [
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor()
-				]
-			}]
-		},
-		options: {
-			legend: {
-				position: 'top',
-			},
-			title: {
-				display: true,
-				text: 'Chart.js Radar Chart'
-			},
-			scale: {
-				ticks: {
-					beginAtZero: true
-				}
-			},
-			annotation: { // not supported, and should not display or error
-				drawTime: 'beforeDatasetsDraw',
-				events: ['dblclick'],
-				annotations: [{
-					type: 'box',
-					xScaleID: 'x-axis-0',
-					yScaleID: 'y-axis-0',
-					xMin: randomScalingFactor(),
-					xMax: randomScalingFactor(),
-					yMin: randomScalingFactor(),
-					yMax: randomScalingFactor(),
-					backgroundColor: 'rgba(101, 33, 171, 0.5)',
-					borderColor: 'rgb(101, 33, 171)',
-					borderWidth: 1,
-					onDblclick: function(e) {
-						console.log('Box', e.type, this);
-					}
-				}]
-			}
-		}
-	};
-
-	window.onload = function() {
-		window.myRadar = new Chart(document.getElementById('canvas'), config);
-	};
-
-	document.getElementById('randomizeData').addEventListener('click', function() {
-		config.data.datasets.forEach(function(dataset) {
-			dataset.data = dataset.data.map(function() {
-				return randomScalingFactor();
-			});
-		});
-
-		window.myRadar.update();
-	});
-
-	var colorNames = Object.keys(window.chartColors);
-	document.getElementById('addDataset').addEventListener('click', function() {
-		var colorName = colorNames[config.data.datasets.length % colorNames.length];
-		var newColor = window.chartColors[colorName];
-
-		var newDataset = {
-			label: 'Dataset ' + config.data.datasets.length,
-			borderColor: newColor,
-			backgroundColor: color(newColor).alpha(0.2).rgbString(),
-			pointBorderColor: newColor,
-			data: [],
+		const randomScalingFactor = function() {
+			return Math.round(Math.random() * 100);
 		};
 
-		for (var index = 0; index < config.data.labels.length; ++index) {
-			newDataset.data.push(randomScalingFactor());
-		}
+		const color = Chart.helpers.color;
+		const config = {
+			type: 'radar',
+			data: {
+				labels: [['Eating', 'Dinner'], ['Drinking', 'Water'], 'Sleeping', ['Designing', 'Graphics'], 'Coding', 'Cycling', 'Running'],
+				datasets: [{
+					label: 'My First dataset',
+					backgroundColor: color(window.chartColors.red).alpha(0.2).rgbString(),
+					borderColor: window.chartColors.red,
+					pointBackgroundColor: window.chartColors.red,
+					data: [
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor()
+					]
+				}, {
+					label: 'My Second dataset',
+					backgroundColor: color(window.chartColors.blue).alpha(0.2).rgbString(),
+					borderColor: window.chartColors.blue,
+					pointBackgroundColor: window.chartColors.blue,
+					data: [
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor(),
+						randomScalingFactor()
+					]
+				}]
+			},
+			options: {
+				legend: {
+					position: 'top',
+				},
+				title: {
+					display: true,
+					text: 'Chart.js Radar Chart'
+				},
+				scale: {
+					ticks: {
+						beginAtZero: true
+					}
+				},
+				plugins: {
+					annotation: { // not supported, and should not display or error
+						drawTime: 'beforeDatasetsDraw',
+						events: ['dblclick'],
+						annotations: [{
+							type: 'box',
+							xScaleID: 'x',
+							yScaleID: 'y',
+							xMin: randomScalingFactor(),
+							xMax: randomScalingFactor(),
+							yMin: randomScalingFactor(),
+							yMax: randomScalingFactor(),
+							backgroundColor: 'rgba(101, 33, 171, 0.5)',
+							borderColor: 'rgb(101, 33, 171)',
+							borderWidth: 1,
+							onDblclick(e) {
+								console.log('Box', e.type, this);
+							}
+						}]
+					}
+				}
+			}
+		};
 
-		config.data.datasets.push(newDataset);
-		window.myRadar.update();
-	});
+		window.onload = function() {
+			window.myRadar = new Chart(document.getElementById('canvas'), config);
+		};
 
-	document.getElementById('addData').addEventListener('click', function() {
-		if (config.data.datasets.length > 0) {
-			config.data.labels.push('dataset #' + config.data.labels.length);
-
-			config.data.datasets.forEach(function(dataset) {
-				dataset.data.push(randomScalingFactor());
+		document.getElementById('randomizeData').addEventListener('click', () => {
+			config.data.datasets.forEach((dataset) => {
+				dataset.data = dataset.data.map(() => randomScalingFactor());
 			});
 
 			window.myRadar.update();
-		}
-	});
-
-	document.getElementById('removeDataset').addEventListener('click', function() {
-		config.data.datasets.splice(0, 1);
-		window.myRadar.update();
-	});
-
-	document.getElementById('removeData').addEventListener('click', function() {
-		config.data.labels.pop(); // remove the label first
-
-		config.data.datasets.forEach(function(dataset) {
-			dataset.data.pop();
 		});
 
-		window.myRadar.update();
-	});
+		const colorNames = Object.keys(window.chartColors);
+		document.getElementById('addDataset').addEventListener('click', () => {
+			const colorName = colorNames[config.data.datasets.length % colorNames.length];
+			const newColor = window.chartColors[colorName];
+
+			const newDataset = {
+				label: 'Dataset ' + config.data.datasets.length,
+				borderColor: newColor,
+				backgroundColor: color(newColor).alpha(0.2).rgbString(),
+				pointBorderColor: newColor,
+				data: [],
+			};
+
+			for (let index = 0; index < config.data.labels.length; ++index) {
+				newDataset.data.push(randomScalingFactor());
+			}
+
+			config.data.datasets.push(newDataset);
+			window.myRadar.update();
+		});
+
+		document.getElementById('addData').addEventListener('click', () => {
+			if (config.data.datasets.length > 0) {
+				config.data.labels.push('dataset #' + config.data.labels.length);
+
+				config.data.datasets.forEach((dataset) => {
+					dataset.data.push(randomScalingFactor());
+				});
+
+				window.myRadar.update();
+			}
+		});
+
+		document.getElementById('removeDataset').addEventListener('click', () => {
+			config.data.datasets.splice(0, 1);
+			window.myRadar.update();
+		});
+
+		document.getElementById('removeData').addEventListener('click', () => {
+			config.data.labels.pop(); // remove the label first
+
+			config.data.datasets.forEach((dataset) => {
+				dataset.data.pop();
+			});
+
+			window.myRadar.update();
+		});
 	</script>
 </body>
 
